--- a/index.css
+++ b/index.css
@@ -70,13 +70,14 @@ a {
 
 .ifr {
     height: 100%;
-    width: 100%;
+    width: 40vw;
     border: 2px solid gray;
     background: #ffffff;
 }
 
 .container {
     height: 97vh;
+    width: 100%;
     display: grid;
     grid-template-columns: 2fr 3fr;
     grid-gap: 4px;
@@ -86,6 +87,24 @@ a {
     background: white;
     padding: 1em;
     border: 2px solid gray;
-    font-size: 16pt;
+    font-size: 1rem;
+    width: 60vw;
 
+}
+
+@media(max-width:600px) {
+    .container {
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .ifr {
+        height: 50vh;
+        width: 100%;
+    }
+
+    .srcCode {
+        height: 50vh;
+        width: 100%;
+    }
 }
